--- a/index.html
+++ b/index.html
@@ -240,7 +240,12 @@ background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, F
       background-color: black;
       color: aquamarine;
     }
-
+    .left-column .dark-mode{
+      background-color:black;
+    }
+    .home .dark-mode{
+      backgroung-color:white;
+    }
     .container.dark-mode .assignments-container {
       background-color: darkslategray;
     }
