--- a/ai_helper.html
+++ b/ai_helper.html
@@ -537,17 +537,17 @@ textarea::-webkit-scrollbar {
 
 </div>
       <script>
-window.embeddedChatbotConfig = {
-chatbotId: "3SxijspB4ruT9p6hni6FC",
-domain: "www.chatbase.co"
-}
+  window.embeddedChatbotConfig = {
+    chatbotId: "3SxijspB4ruT9p6hni6FC",
+    domain: "www.chatbase.co"
+  };
 </script>
 <script
-src="https://www.chatbase.co/embed.min.js"
-chatbotId="3SxijspB4ruT9p6hni6FC"
-domain="www.chatbase.co"
-defer>
-</script>
+  src="https://www.chatbase.co/embed.min.js"
+  chatbotId="3SxijspB4ruT9p6hni6FC"
+  domain="www.chatbase.co"
+  defer
+></script>
     </div>
 
 
