--- a/ai_helper.html
+++ b/ai_helper.html
@@ -536,18 +536,18 @@ textarea::-webkit-scrollbar {
   <span class="dot" onclick="currentSlide(3)"></span>
 
 </div>
-      <script>
-  window.embeddedChatbotConfig = {
-    chatbotId: "3SxijspB4ruT9p6hni6FC",
-    domain: "www.chatbase.co"
-  };
+     <script>
+window.embeddedChatbotConfig = {
+chatbotId: "3SxijspB4ruT9p6hni6FC",
+domain: "www.chatbase.co"
+}
 </script>
 <script
-  src="https://www.chatbase.co/embed.min.js"
-  chatbotId="3SxijspB4ruT9p6hni6FC"
-  domain="www.chatbase.co"
-  defer
-></script>
+src="https://www.chatbase.co/embed.min.js"
+chatbotId="3SxijspB4ruT9p6hni6FC"
+domain="www.chatbase.co"
+defer>
+</script>
     </div>
 
 
