--- a/ai_helper.html
+++ b/ai_helper.html
@@ -536,15 +536,15 @@ textarea::-webkit-scrollbar {
   <span class="dot" onclick="currentSlide(3)"></span>
 
 </div>
-     <script>
+  <script>
 window.embeddedChatbotConfig = {
-chatbotId: "3SxijspB4ruT9p6hni6FC",
+chatbotId: "Xid0j0uSpBNb4a2-PyKIa",
 domain: "www.chatbase.co"
 }
 </script>
 <script
 src="https://www.chatbase.co/embed.min.js"
-chatbotId="3SxijspB4ruT9p6hni6FC"
+chatbotId="Xid0j0uSpBNb4a2-PyKIa"
 domain="www.chatbase.co"
 defer>
 </script>
