--- a/ai_helper.html
+++ b/ai_helper.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Graphite</title>
+  <title>Graphite | AI Helper</title>
         <link rel="icon" href="images/logo2.png">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
