--- a/calculator.html
+++ b/calculator.html
@@ -323,7 +323,7 @@
 	background-color: #FFF;
 	box-shadow: inset 0px 0px 10px #030303, inset 0px -20px 1px rgba(150, 150, 150, .2);
 	font-size: 28px;
-	color: #666;
+	color: #FFF;
 	text-align: right;
 	font-weight: 400;
 }
