--- a/calculator.html
+++ b/calculator.html
@@ -316,11 +316,12 @@
 	width: 174px;
 	padding: 0 10px;
 	border-radius: 4px;
-	border-top: 2px solid #C1C1C1;
-	border-right: 2px solid #C1C1C1;
-	border-bottom: 2px solid #FFF;
-	border-left: 2px solid #FFF;
-	background-color: #FFF;
+	border-top: 2px solid #914a4a;
+	border-right: 2px solid #573232;
+	border-bottom: 2px solid #590101;
+	border-left: 2px solid #8c0606;
+	background-color: #a63c3c
+;
 	box-shadow: inset 0px 0px 10px #030303, inset 0px -20px 1px rgba(150, 150, 150, .2);
 	font-size: 28px;
 	color: #FFF;
