--- a/calculator.html
+++ b/calculator.html
@@ -477,7 +477,7 @@
         <hr>
         <a class="home" href="index.html"><img src="images/home-button.png" alt="Home" width="40" height="40"></a>
   <a class="calc" href="calculator.html"><img src="images/calc.png" alt="Calculator" width="40" height="40"></a>
-  <a class="task" href="ai_helper.html"><img src="images/cmark.png" alt="tasks" width="40" height="40"></a>
+  <a class="task" href="ai_helper.html"><img src="826118-removebg-preview.png" alt="tasks" width="40" height="40"></a>
       </div>
       <hr>
       <br>
