--- a/calculator.html
+++ b/calculator.html
@@ -26,7 +26,7 @@
 
     .left-column {
       flex: 0 0 250px;
-      background-color: #f9f9f9;
+       background-color:  linear-gradient(to right, #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186);
       padding: 20px;
       resize: horizontal;
       overflow: auto;
