--- a/calculator.html
+++ b/calculator.html
@@ -10,7 +10,8 @@
     <style>
 
     /* CSS styles */
-    body {
+ .body
+{
       font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       margin: 0;
       padding: 0;
