--- a/calculator.html
+++ b/calculator.html
@@ -10,15 +10,12 @@
     <style>
 
     /* CSS styles */
- .body
-{
-      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #b51212;
-
-      
-    }
+.body
+	{
+		margin:0
+		padding:0
+		background-color: linear-gradient( #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186 )
+	}
 
     .container {
       display: flex;
@@ -27,7 +24,7 @@
 
     .left-column {
       flex: 0 0 250px;
-       background-color:  linear-gradient(to right, #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186);
+       background-color:  linear-gradient( to right, #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186);
       padding: 20px;
       resize: horizontal;
       overflow: auto;
