--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
           <style>
 
           /* CSS styles */
-          body {
-            background
-            :linear-gradient(to right, #3c2929, #8a2b2b);
-            margin: 0;
-            padding: 0;
-              color: #333;
-            }
+     .body
+	{
+		margin:0:
+		padding:0;
+		background-color: linear-gradient( #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186 );
+	}
           
           .gcse-searchbox{
             padding:20px;
