--- a/calculator.html
+++ b/calculator.html
@@ -12,9 +12,9 @@
     /* CSS styles */
 .body
 	{
-		margin:0
-		padding:0
-		background-color: linear-gradient( #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186 )
+		margin:0;
+		padding:0;
+		background-color: linear-gradient( #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186 );
 	}
 
     .container {
