--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
 	{
 		margin:0;
 		padding:0;
-		background-color: linear-gradient( #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186 );
+		background-color: linear-gradient(to right, #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186 );
 	}
 
     .container {
