--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
       <html>
 
       <head>
-        <title>Graphite | Home Page</title>
+        <title>Graphite | Home Page/Search Engine</title>
               <link rel="icon" href="images/logo2.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
