--- a/calculator.html
+++ b/calculator.html
@@ -397,7 +397,8 @@
   display: none;
   padding: 30px;
   text-align: center;
-  background-color:  linear-gradient(to right, #780b0b, #8a2b2b);
+   background: linear-gradient(to right, #3c2929, #8a2b2b);
+        color: white;
 }
 
 /* Next & previous buttons */
