--- a/calculator.html
+++ b/calculator.html
@@ -414,7 +414,7 @@
   font-size: 20px;
   border-radius: 0 3px 3px 0;
   user-select: none;
-   background-color:  linear-gradient(to right, #780b0b, #8a2b2b);
+background: linear-gradient(to right, #c72222, #bd9186);
 }
 
 /* Position the "next button" to the right */
