--- a/calculator.html
+++ b/calculator.html
@@ -397,7 +397,7 @@
   display: none;
   padding: 30px;
   text-align: center;
-   background: linear-gradient(to right, #3c2929, #8a2b2b);
+   background: linear-gradient(to right, #c72222, #bd9186);
         color: white;
 }
 
@@ -414,7 +414,7 @@
   font-size: 20px;
   border-radius: 0 3px 3px 0;
   user-select: none;
-background: linear-gradient(to right, #c72222, #bd9186);
+background: linear-gradient(to right, #c72222, #bd9186, #c72222, #bd9186);
 }
 
 /* Position the "next button" to the right */
@@ -434,7 +434,7 @@ background: linear-gradient(to right, #c72222, #bd9186);
 .dot-container {
   text-align: center;
   padding: 20px;
-  background: #ddd;
+ background: linear-gradient(to right, #c72222, #bd9186);
 }
 
 /* The dots/bullets/indicators */
@@ -443,7 +443,7 @@ background: linear-gradient(to right, #c72222, #bd9186);
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+ background: linear-gradient(to right, #c72222, #962929);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
