--- a/calculator.html
+++ b/calculator.html
@@ -378,7 +378,7 @@
 #clearButton {
 	color:black ;
 	text-shadow: -1px -1px 0px gray;
-	background-color:  linear-gradient(to right, #780b0b, #8a2b2b);
+	background-color:  linear-gradient(to right, #a33131, #6b1414);
 	border-top: 2px solid #FF8484;
 	border-right: 2px solid #FF8484;
 	border-bottom: 2px solid #800000;
@@ -397,7 +397,7 @@
   display: none;
   padding: 30px;
   text-align: center;
-   background: linear-gradient(to right, #c72222, #bd9186);
+   background: linear-gradient(to right, #611a1a, #910909);
         color: white;
 }
 
