--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
 	{
 		margin:0;
 		padding:0;
-		background-color: linear-gradient(to right, #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186 );
+		background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
 	}
 
     .container {
@@ -24,7 +24,7 @@
 
     .left-column {
       flex: 0 0 250px;
-       background-color:  linear-gradient( to right, #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186);
+     background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
       padding: 20px;
       resize: horizontal;
       overflow: auto;
@@ -414,7 +414,7 @@
   font-size: 20px;
   border-radius: 0 3px 3px 0;
   user-select: none;
-background: linear-gradient(to right, #c72222, #bd9186, #c72222, #bd9186);
+background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
 }
 
 /* Position the "next button" to the right */
