--- a/calculator.html
+++ b/calculator.html
@@ -397,7 +397,7 @@
   display: none;
   padding: 30px;
   text-align: center;
-   background: linear-gradient(to right, #611a1a, #910909);
+  background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
         color: white;
 }
 
@@ -434,7 +434,7 @@ background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
 .dot-container {
   text-align: center;
   padding: 20px;
- background: linear-gradient(to right, #c72222, #bd9186);
+background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
 }
 
 /* The dots/bullets/indicators */
@@ -443,7 +443,7 @@ background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
   height: 15px;
   width: 15px;
   margin: 0 2px;
- background: linear-gradient(to right, #c72222, #962929);
+background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
