--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	{
 		margin:0:
 		padding:0;
-		background-color: linear-gradient( #780b0b, #8a2b2b, #8c1616, #c72222, #bd9186 );
+		background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
 	}
           
           .gcse-searchbox{
@@ -27,7 +27,7 @@
 
           .left-column {
             flex: 0 0 250px;
-            background-color: #f9f9f9;
+   background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
             padding: 20px;
             resize: horizontal;
             overflow: auto;
@@ -309,7 +309,7 @@
 
       /* Slides */
       .mySlides {
-         background: linear-gradient(to right, #3c2929, #8a2b2b);
+        background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
         color: white;
         display: none;
         padding: 30px;
@@ -327,7 +327,7 @@
         margin-top: -30px;
         padding: 16px;
         color: #white;
-        background: linear-gradient(to right, #780b0b, #8a2b2b);
+      background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
         font-weight: bold;
         font-size: 20px;
         border-radius: 0 3px 3px 0;
@@ -351,7 +351,7 @@
       .dot-container {
         text-align: center;
         padding: 20px;
-        background: #ddd;
+       background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
       }
 
       /* The dots/bullets/indicators */
@@ -360,7 +360,7 @@
         height: 15px;
         width: 15px;
         margin: 0 2px;
-        background-color: #bbb;
+       background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
         border-radius: 50%;
         display: inline-block;
         transition: background-color 0.6s ease;
