--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           .header {
       background: #485563;  /* fallback for old browsers */
       background: -webkit-linear-gradient(to right, #3c2929, #8a2b2b);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to right, #3c2929, #8a2b2b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      background: linear-gradient(to right,#611a1a, #3c2929, #8a2b2b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
             color: #fff;
             padding: 10px;
