--- a/calculator.html
+++ b/calculator.html
@@ -399,6 +399,8 @@
   text-align: center;
   background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
         color: white;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+        ;
 }
 
 /* Next & previous buttons */
