--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           .container {
             display: flex;
             height: 100vh;
+		  background: linear-gradient(to right, #a60505,#a12828 , #852121, #611a1a);
           }
 
           .left-column {
